--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^9.1.3",
     "eslint": "^9.9.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
